--- a/styles/scss/_animation-styles.scss
+++ b/styles/scss/_animation-styles.scss
@@ -13,7 +13,8 @@
 }
 
 .project-description.load-hidden {
-    left: -1000px;
+    left: -200%;
+    opacity: 0;
 }
 
 .flip-container.load-hidden {
